--- a/catalog.html
+++ b/catalog.html
@@ -138,22 +138,32 @@
               <option value="expensive">Сначала дорогие</option>
               <option value="popular">Сначала популярные</option>
             </select>
-            <a href="#" class="button-show button-show-active">
-              <span class="visually-hidden">Показать карточки.</span>
-            </a>
-            <a class="button-show" href="#">
-              <span class="visually-hidden">Показать слайды.</span>
-            </a>
-            <a class="button-show" href="#">
-              <span class="visually-hidden">Показать список.</span>
-            </a>
+            <ul class="button-show-list">
+              <li class="button-show-item">
+                <a href="#" class="button-show button-show-active">
+                  <span class="visually-hidden">Показать карточки.</span>
+                </a>
+              </li>
+              <li class="button-show-item">
+                <a class="button-show" href="#">
+                  <span class="visually-hidden">Показать слайды.</span>
+                </a>
+              </li>
+              <li class="button-show-item">
+                <a class="button-show" href="#">
+                  <span class="visually-hidden">Показать список.</span>
+                </a>
+              </li>
+            </ul>
           </div>
 
           <ul class="product-list">
             <li class="product-item">
-              <a class="product-link" href="#">
-                <h3 class="product-title">Amara Resort & Spa</h3>
+              <a class="product-image-link" href="#">
                 <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
+              </a>
+              <a class="product-link">
+                <h3 class="product-title">Amara Resort & Spa</h3>
               </a>
               <p class="product-type-price">
                 <span class="product-type">Гостиница</span>
@@ -163,15 +173,17 @@
                 <a class="product-more" href="#">Подробнее</a>
                 <button class="product-to-favorites" type="button">В Избранное</button>
               </p>
-              <p class="product-category star-4">
-                <span class="visually-hidden">Четыре звезды</span>
+              <p class="product-category">
+                <span class="stars star-4"><span class="visually-hidden">Четыре звезды</span></span>
                 <span class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></span>
               </p>
             </li>
             <li class="product-item">
-              <a class="product-link" href="#">
-                <h3 class="product-title">Villas at Poco Diablo</h3>
+              <a class="product-image-link" href="#">
                 <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
+              </a>
+              <a class="product-link">
+                <h3 class="product-title">Villas at Poco Diablo</h3>
               </a>
               <p class="product-type-price">
                 <span class="product-type">Гостиница</span>
@@ -181,15 +193,17 @@
                 <a class="product-more" href="#">Подробнее</a>
                 <button class="product-in-favorites" type="button">В Избранном</button>
               </p>
-              <p class="product-category star-4">
-                <span class="visually-hidden">Четыре звезды</span>
+              <p class="product-category">
+                <span class="stars star-4"><span class="visually-hidden">Четыре звезды</span></span>
                 <span class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></span>
               </p>
             </li>
             <li class="product-item">
-              <a class="product-link" href="#">
-                <h3 class="product-title">Desert Quail Inn</h3>
+              <a class="product-image-link" href="#">
                 <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
+              </a>
+              <a class="product-link">
+                <h3 class="product-title">Desert Quail Inn</h3>
               </a>
               <p class="product-type-price">
                 <span class="product-type">Гостиница</span>
@@ -199,15 +213,17 @@
                 <a class="product-more" href="#">Подробнее</a>
                 <button class="product-to-favorites" type="button">В Избранное</button>
               </p>
-              <p class="product-category star-3">
-                <span class="visually-hidden">Три звезды</span>
+              <p class="product-category">
+                <span class="stars star-3"><span class="visually-hidden">Три звезды</span></span>
                 <span class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></span>
               </p>
             </li>
             <li class="product-item">
-              <a class="product-link" href="#">
-                <h3 class="product-title">GreenTree Inn</h3>
+              <a class="product-image-link" href="#">
                 <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
+              </a>
+              <a class="product-link">
+                <h3 class="product-title">GreenTree Inn</h3>
               </a>
               <p class="product-type-price">
                 <span class="product-type">Гостиница</span>
@@ -217,8 +233,8 @@
                 <a class="product-more" href="#">Подробнее</a>
                 <button class="product-to-favorites" type="button">В Избранное</button>
               </p>
-              <p class="product-category star-2">
-                <span class="visually-hidden">Две звезды</span>
+              <p class="product-category">
+                <span class="stars star-2"><span class="visually-hidden">Две звезды</span></span>
                 <span class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></span>
               </p>
             </li>
