--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="index.html">Главная</a>
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="user-list">
@@ -47,6 +47,7 @@
         <section class="hero">
           <h1 class="visually-hidden">Курортный город Седона.</h1>
           <img class="hero-title" src="images/hero/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+
         </section>
 
         <section class="advantages">
